[gd_scene load_steps=7 format=3 uid="uid://c1ph53byo1unb"]

[ext_resource type="Texture2D" uid="uid://begmi5hmo48f6" path="res://Assets/Image/Character/Player/templerun/Face-player.png" id="1_mpywy"]
[ext_resource type="Script" path="res://Assets/Script/Controller/UI/GUI/GUI_Play.gd" id="1_xqce5"]
[ext_resource type="FontFile" uid="uid://bsmkjcem4b3i1" path="res://Assets/Fonts/DisposableDroidBB.ttf" id="2_68s4u"]
[ext_resource type="PackedScene" uid="uid://d2kow5kkphlx6" path="res://Assets/Scences/UI/Mission_Log/mission.tscn" id="3_t1rl4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grsui"]
bg_color = Color(0, 0.392157, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74kd0"]
bg_color = Color(0, 1, 1, 1)

[node name="GuiPlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xqce5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Character_Profile" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.1
anchor_bottom = 0.178
offset_bottom = -0.160004
texture = ExtResource("1_mpywy")
expand_mode = 1

[node name="Character_Name" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.112
anchor_right = 0.307
anchor_bottom = 0.033
offset_left = -0.360001
offset_top = 5.0
offset_right = 0.039978
offset_bottom = 5.24
theme_override_fonts/font = ExtResource("2_68s4u")
theme_override_font_sizes/font_size = 18
text = "LABEL"

[node name="Health_Bar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.049
anchor_right = 0.307
anchor_bottom = 0.086
offset_left = -0.360001
offset_top = -0.280003
offset_right = 0.039978
offset_bottom = 0.079998
theme_override_fonts/font = ExtResource("2_68s4u")
theme_override_styles/fill = SubResource("StyleBoxFlat_grsui")
value = 100.0
rounded = true

[node name="Armor_Bar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.097
anchor_right = 0.307
anchor_bottom = 0.135
offset_left = -0.360001
offset_top = 0.159996
offset_right = 0.039978
offset_bottom = -0.200005
theme_override_fonts/font = ExtResource("2_68s4u")
theme_override_styles/fill = SubResource("StyleBoxFlat_74kd0")
value = 100.0

[node name="Biome_Location" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.146
anchor_right = 0.307
anchor_bottom = 0.179
offset_left = 2.64
offset_top = -10.12
offset_right = 3.03998
offset_bottom = -9.87999
theme_override_fonts/font = ExtResource("2_68s4u")
theme_override_font_sizes/font_size = 18
text = "LABEL
"

[node name="Mission" parent="CanvasLayer" instance=ExtResource("3_t1rl4")]
anchor_left = 0.857
anchor_top = 0.381
anchor_right = 1.001
anchor_bottom = 0.681
offset_left = 0.039917
offset_top = -0.320007
offset_right = -0.280029
offset_bottom = -0.320038
